# artifacts/api-server/src/app.ts
@@ -27,7 +27,6 @@ app.use(
 );
 app.use(cors());
 
-app.use("/api/webhook", express.raw({ type: "application/json" }));
 app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 
